[package]
name = "runx"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A universal project launcher with local runtime caching"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
flate2 = "1.0"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tar = "0.4"
tempfile = "3.10"
toml = "0.8"
ureq = { version = "2.10", features = ["json"] }
xz2 = "0.1"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
